tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-62529-3.stderr
error[E0277]: expected a `Fn<(<_ as ATC<'a>>::Type,)>` closure, found `F`
  --> $DIR/issue-62529-3.rs:25:14
   |
LL |         call(f, ());
   |         ---- ^ expected an `Fn<(<_ as ATC<'a>>::Type,)>` closure, found `F`
   |         |
   |         required by a bound introduced by this call
   |
   = note: expected a closure with arguments `((),)`
              found a closure with arguments `(<_ as ATC<'a>>::Type,)`
note: required by a bound in `call`
  --> $DIR/issue-62529-3.rs:9:36
   |
LL | fn call<'b, T: for<'a> ATC<'a>, F: for<'a> Fn(<T as ATC<'a>>::Type)>(
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `call`

error[E0631]: type mismatch in function arguments
  --> $DIR/issue-62529-3.rs:25:9
   |
LL | / fn call<'b, T: for<'a> ATC<'a>, F: for<'a> Fn(<T as ATC<'a>>::Type)>(
LL | |     f: F,
LL | |     x: <T as ATC<'b>>::Type,
LL | | ) {
   | |_- found signature defined here
...
LL |           call(f, ());
   |           ^^^^^^^^^^^ expected due to this
   |
   = note: expected function signature `fn((_, ())) -> _`
              found function signature `for<'b> fn((_, <_ as ATC<'b>>::Type)) -> _`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0631.
For more information about an error, try `rustc --explain E0277`.
